# llama-demo

./: .env  .gitignore  ingest_data.py  main.py  pyproject.toml  requirements.txt
