[project]
name = "llama-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "llama-index>=0.12.49",
    "llama-index-embeddings-gemini>=0.3.2",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-vector-stores-pinecone>=0.6.0",
    "llama-parse>=0.6.49",
    "pillow>=10.4.0",
    "pinecone-client>=6.0.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
]
